--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,18 @@
-== README
+# Flixter Rails Application
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This app is a two sided video streaming marketplace platform with credit card payment capabilities. User role management and complex interface with advanced database relationships.
 
-Things you may want to cover:
+The following languages, frameworks and tools were used to create this application.
 
-* Ruby version
+* Ruby on Rails
+* Postgresql database
+* Heroku
+* Vagrant
+* Ruby Gems
+* Bootstrap
+* AWS for images and video streaming
+* Stripe API
 
-* System dependencies
+** Test the application
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+You can download or clone the files to run this application locally. You will need to know how to navigate the Rails framework as the functionality is spread across the files in the Controller, Models and Views folders.
