--- a/README.rdoc
+++ b/README.rdoc
@@ -1,17 +1,17 @@
 == Flixter Rails Application
 
-This app is a two sided video streaming marketplace platform with credit card payment capabilities. User role management and complex interface with advanced database relationships.
+This app is a two sided video streaming marketplace platform with credit card payment capabilities. User role management and complex interface with advanced database relationships. Users can create and customize their own courses or sign up to take courses.
 
-The following languages, frameworks and tools were used to create this application.
+The following technologies were used to create this application.
 
 * Ruby on Rails
+* Javascript, jQuery
 * Postgresql database
-* Heroku
-* Vagrant
-* Ruby Gems
-* Bootstrap
+* Heroku hosting
+* Stripe payment processing API
+* Bootstrap framework
 * AWS for images and video streaming
-* Stripe API
+* Devise user forms
 
 == Test the application
 
